# nuitka_simple_gui

./: .gitignore  LICENSE  README.md  config.json  nuitka_simple_gui.py  nuitkaui.pyw  pyproject.toml
