[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nuitka_simple_gui"
description = "A simple GUI application using Nuitka."
authors = [{name = "ClericPy", email = "clericpy@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
dependencies = [
    "FreeSimpleGUI",
    "nuitka",
    "pip",
]
scripts = { nuitka_simple_gui = "nuitka_simple_gui:main" }


[project.urls]
Home = "https://github.com/ClericPy/nuitka_simple_gui"
